language/move-lang/tests/move_check/to_bytecode/unassigned_address.exp
error[E08002]: unassigned named address
  ┌─ tests/move_check/to_bytecode/unassigned_address.move:7:8
  │
6 │ address A {
  │         - No value specified for address 'A'
7 │ module Ex {}
  │        ^^ Unable to fully compile and resolve module declaration

error[E08002]: unassigned named address
   ┌─ tests/move_check/to_bytecode/unassigned_address.move:10:11
   │
10 │ module A::M {
   │        -  ^ Unable to fully compile and resolve module declaration
   │        │   
   │        No value specified for address 'A'

error[E08002]: unassigned named address
   ┌─ tests/move_check/to_bytecode/unassigned_address.move:12:12
   │
12 │     friend A::N;
   │            ^^^^
   │            │
   │            Unable to fully compile and resolve module identifier
   │            No value specified for address 'A'

error[E08002]: unassigned named address
   ┌─ tests/move_check/to_bytecode/unassigned_address.move:16:11
   │
16 │ module A::N {
   │        -  ^ Unable to fully compile and resolve module declaration
   │        │   
   │        No value specified for address 'A'

error[E08002]: unassigned named address
   ┌─ tests/move_check/to_bytecode/unassigned_address.move:18:19
   │
18 │         A::M::foo(@A)
   │                   ^^
   │                   ││
   │                   │No value specified for address 'A'
   │                   Unable to fully compile and resolve address value

